--- a/options/index.html
+++ b/options/index.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <link href="style.css" rel="stylesheet" />
-  </head>
-  <body>
-    <h1 id="myHeading">My content</h1>
-    <script src="script.js"></script>
-  </body>
+<html>
+    <h1>Yo</h1>
+    <div id="app"></div>
+    <script src="dist/main.js"></script>
+    <script>
+        console.log("Fuck")
+    </script>
 </html>
+
