--- a/options/index.html
+++ b/options/index.html
@@ -13,8 +13,15 @@
                 <p>
                     Github API key: <input type="text" id="github_api_key" name="github_api_key" />
                 </p>
-                <input type="submit" value="Save">
             </fieldset>
+            <fieldset>
+                <legend>Github options</legend>
+                <p>
+                    Default repo: <input type="text" id="github_option_default_repo" name="github_option_default_repo" />
+                </p>
+            </fieldset>
+
+            <input type="submit" value="Save">
         </form>
     </body>
     <script src="script.js"></script>
