Create new issue

--- a/options/index.html
+++ b/options/index.html
@@ -17,6 +17,9 @@
             <fieldset>
                 <legend>Github options</legend>
                 <p>
+                    Username: <input type="text" id="github_option_username" name="github_option_username" />
+                </p>
+                <p>
                     Default repo: <input type="text" id="github_option_default_repo" name="github_option_default_repo" />
                 </p>
             </fieldset>
